sumInvoices function was created to calculated the total

--- a/index.html
+++ b/index.html
@@ -102,12 +102,11 @@
                         <thead>
                             <tr>
                                 <th class="col-id">ID</th>
-                                <th>Client</th>
-                                <th>Concept</th>
+                                <th class="col-client">Client</th>
+                                <th class="col-concept">Concept</th>
                                 <th class="col-quantity">Quantity</th>
-                                <th class="col-price">Price</th>
-                                <th class="col-total">Total</th>
-                                <th class="col-hour">Hour</th>
+                                <th class="col-price">Price per invoice</th>
+                                <th class="col-total">Total</th>                            
                             </tr>
                         </thead>
                         <tbody id="stack-table-body">
@@ -128,12 +127,11 @@
                         <thead>
                             <tr>
                                 <th class="col-id">ID</th>
-                                <th>Client</th>
-                                <th>Concept</th>
+                                <th class="col-client">Client</th>
+                                <th class="col-concept">Concept</th>
                                 <th class="col-quantity">Quantity</th>
                                 <th class="col-price">Price</th>
-                                <th class="col-total">Total</th>
-                                <th class="col-hour">Hour</th>
+                                <th class="col-total">Total</th>                            
                             </tr>
                         </thead>
                         <tbody id="queue-table-body">
@@ -154,14 +152,11 @@
                         <thead>
                             <tr>
                                 <th class="col-id">ID</th>
-                                
                                 <th>Client</th>
                                 <th>Concept</th>
-                                <th class="col-quantity">Quantity</th>
-                                <th class="col-price">Price</th>
-                                <th class="col-total">Total</th>
-                                <th class="col-hour">Hour</th>
-                            </tr>
+                                <th>Quantity</th>
+                                <th>Price</th>
+                                <th>Total</th>                            </tr>
                         </thead>
                         <tbody id="list-table-body">
                             <tr id="list-empty-row">
