Queue Data strucure logic was added

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="queue-section">
                 <div class="queue-header">
                     <h3 class="queue-title">Queue</h3>
-                    <span class="queue-badge">From top to bottom.</span>
+                    <span class="queue-badge">From top to bottom [FIFO].</span>
                 </div>
                 <div class="queue-container">
                     <table class="custom-table">
@@ -130,7 +130,7 @@
                                 <th class="col-client">Client</th>
                                 <th class="col-concept">Concept</th>
                                 <th class="col-quantity">Quantity</th>
-                                <th class="col-price">Price</th>
+                                <th class="col-price">Price per invoice</th>
                                 <th class="col-total">Total</th>                            
                             </tr>
                         </thead>
@@ -155,7 +155,7 @@
                                 <th>Client</th>
                                 <th>Concept</th>
                                 <th>Quantity</th>
-                                <th>Price</th>
+                                <th>Price per invoice</th>
                                 <th>Total</th>                            </tr>
                         </thead>
                         <tbody id="list-table-body">
