Enqueues bug was fixed and delete buttons were added

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                         </tbody>
                     </table>
                 </div>
+                <div class="button-stack">
+                        <button type="button" id="btn-delete-stack">Delete</button>
+                    </div>
             </div>
             <div class="queue-section">
                 <div class="queue-header">
@@ -141,6 +144,9 @@
                         </tbody>
                     </table>
                 </div>
+                <div class="button-queue">
+                        <button type="button" id="btn-delete-queue">Delete</button>
+                    </div>
             </div>
             <div class="list-section">
                 <div class="list-header">
@@ -165,6 +171,9 @@
                         </tbody>
                     </table>
                 </div>
+                <div class="button-list">
+                        <button type="button" id="btn-delete-list">Delete</button>
+                    </div>
             </div>
         </div>
     </div>
